<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:scaleType="centerCrop"
    android:gravity="center_horizontal"
    tools:context=".ForgotPwdActivity">
    <RelativeLayout
        android:id="@+id/logo_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        >
        <ImageView
            android:id="@+id/logo_forgot_pass"
            android:background="@drawable/logo_forgot_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_forgot_pass"
            android:layout_marginTop="30dp"
            android:layout_marginStart="0dp"
            android:text="@string/forgot_pass"
            android:textAppearance="@style/sign_up"
            android:textSize="32sp"
            />
        <TextView
            android:id="@+id/no_worries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_pass"
            android:layout_marginTop="10dp"
            android:text="@string/no_worries_"
            android:textAppearance="@style/no_worries_"
            android:lineSpacingExtra="5sp"
            android:textSize="14sp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rectangle_addemail"
        android:layout_marginTop="39dp"
        android:background="@drawable/rectangle_addusername"
        >

        <EditText
            android:id="@+id/recovery_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:drawablePadding="5dp"
            android:hint="@string/enter_email"
            android:longClickable="false"
            android:minHeight="48dp"
            android:padding="16dp"
            android:textColorHint="#C9000000"
            android:textSize="13sp" />
    </RelativeLayout>
    <Button
        android:id="@+id/btn_for_confirm_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/custom_orange_2"
        android:text="@string/confirm"
        android:textColor="#FFFFFF" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/have_account"
        android:layout_marginTop="28dp">

        <TextView
            android:id="@+id/already_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:text="@string/already_have"
            android:textAppearance="@style/already_have"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/already_have"
            android:layout_marginStart="8dp"
            android:text="@string/text_login"
            android:textAppearance="@style/text_login"
            android:textSize="16sp"
            />
    </RelativeLayout>
</LinearLayout>