<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:scaleType="centerCrop"
    android:gravity="center_horizontal"
    tools:context=".SignUpActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_icon"
        android:layout_marginTop="45dp"
        android:background="@drawable/appicon"
        />
    <TextView
        android:id="@+id/sign_up_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        android:textSize="32sp"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rectangle_addusername"
        android:layout_marginTop="48dp"
        android:background="@drawable/rectangle_addusername"
        >
        <EditText
            android:id="@+id/enter_username"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/enter_username"
            android:minHeight="48dp"
            android:padding="16dp"
            android:textColorHint="#C9000000"
            android:textSize="13sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rectangle_addemail"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_addusername"
        >
        <EditText
            android:id="@+id/enter_email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/enter_email"
            android:minHeight="48dp"
            android:padding="16dp"
            android:textColorHint="#C9000000"
            android:textSize="13sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rectangle_phonenum"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_addusername"
        >
        <EditText
            android:id="@+id/enter_phonenum"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:hint="@string/enter_phonenum"
            android:minHeight="48dp"
            android:padding="16dp"
            android:textColorHint="#C9000000"
            android:textSize="13sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rectangle_addpass"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_addusername"
        >
        <EditText
            android:id="@+id/enter_passwd"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/visibility_off"
            android:drawablePadding="5dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:longClickable="false"
            android:minHeight="48dp"
            android:padding="16dp"
            android:textColorHint="#C9000000"
            android:textSize="13sp" />

    </RelativeLayout>
    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/custom_orange_2"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/have_account"
        android:layout_marginTop="28dp">

        <TextView
            android:id="@+id/already_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:text="@string/already_have"
            android:textAppearance="@style/already_have"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/already_have"
            android:layout_marginStart="8dp"
            android:text="@string/text_login"
            android:textAppearance="@style/text_login"
            android:textSize="16sp"
            />
    </RelativeLayout>
</LinearLayout>