<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:scaleType="centerCrop"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/banner_logi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/banner_logi"
        android:textAppearance="@style/banner_logi"
        android:textSize="32sp"/>
    <RelativeLayout
        android:id="@+id/horizontal_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/dashboard_m">
        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/avatar" android:layout_marginStart="45dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/title"
            android:textAppearance="@style/title"
            android:textSize="18sp"
            android:layout_toEndOf="@+id/user_avatar"
            android:layout_marginStart="8dp" />
        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textAppearance="@style/subtitle"
            android:lineSpacingExtra="1sp"
            android:translationY="-0.74sp"
            android:gravity="top"
            android:textSize="16sp"
            android:layout_below="@+id/title"
            android:layout_toEndOf="@+id/user_avatar"
            android:layout_marginStart="8dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/frame_25"
        android:layout_width="374dp"
        android:layout_height="520dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/frame_25">
        <TextView
            android:id="@+id/date_15_10_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/date_15_10_"
            android:textAppearance="@style/date_15_10_"
            android:textSize="18sp"
            android:gravity="center" />
        <RelativeLayout
            android:id="@+id/rectangle_2"
            android:layout_width="157.9dp"
            android:layout_height="215dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_below="@+id/date_15_10_"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle_2">
            <ImageView
                android:id="@+id/groupdetect"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="13dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="13dp"
                android:src="@drawable/groupdetected" />
            <TextView
                android:id="@+id/the_number_"
                android:layout_width="103dp"
                android:layout_height="84dp"
                android:layout_toEndOf="@+id/groupdetect"
                android:layout_marginStart="5dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="7dp"
                android:text="@string/the_number_"
                android:textAppearance="@style/the_number_"
                android:gravity="top"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/some_id"
                android:layout_width="69dp"
                android:layout_height="95dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/the_number_"
                android:layout_marginTop="-16dp"
                android:text="@string/some_id"
                android:textAppearance="@style/some_id"
                android:gravity="center_horizontal|top"
                android:textSize="63sp"
                />
            <TextView
                android:id="@+id/potholes"
                android:layout_width="88dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/some_id"
                android:layout_marginTop="-30dp"
                android:text="@string/potholes"
                android:textAppearance="@style/the_number_"
                android:gravity="center_horizontal|top"
                android:textSize="16sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rectangle_3"
            android:layout_width="157.9dp"
            android:layout_height="215dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:layout_below="@+id/date_15_10_"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle_3">
            <TextView
                android:id="@+id/the_number_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="7dp"
                android:gravity="center_horizontal|top"
                android:text="@string/the_number_2"
                android:textAppearance="@style/the_number_2"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/some_id_2"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/the_number_2"
                android:layout_marginTop="-16dp"
                android:text="@string/some_id_2"
                android:textAppearance="@style/some_id_2"
                android:gravity="center_horizontal|top"
                android:textSize="63sp" />
            <TextView
                android:id="@+id/potholes2"
                android:layout_width="88dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/some_id_2"
                android:layout_marginTop="-30dp"
                android:text="@string/potholes"
                android:textAppearance="@style/the_number_2"
                android:gravity="center_horizontal|top"
                android:textSize="16sp" />
            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/potholes2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-5dp"
                android:background="@drawable/button_1"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:text="@string/add"
                android:textAppearance="@style/add"
                android:textSize="20sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rectangle_4"
            android:layout_width="157.9dp"
            android:layout_height="215dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_below="@+id/rectangle_2"
            android:layout_marginTop="12dp"
            android:background="@drawable/rectangle_4">
            <ImageView
                android:id="@+id/durationflag"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="13dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/flag" />
            <TextView
                android:id="@+id/tripduration"
                android:layout_width="103dp"
                android:layout_height="84dp"
                android:layout_toEndOf="@+id/durationflag"
                android:layout_marginStart="5dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:text="@string/trip_duration"
                android:textAppearance="@style/trip_duration"
                android:gravity="top"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/some_id_3"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tripduration"
                android:layout_marginTop="-16dp"
                android:text="@string/some_id_3"
                android:textAppearance="@style/some_id_3"
                android:gravity="center_horizontal|top"
                android:textSize="63sp"
                />
            <TextView
                android:id="@+id/minutes"
                android:layout_width="88dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/some_id_3"
                android:layout_marginTop="-25dp"
                android:text="@string/minutes"
                android:textAppearance="@style/trip_duration"
                android:gravity="center_horizontal|top"
                android:textSize="16sp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rectangle_5"
            android:layout_width="157.9dp"
            android:layout_height="215dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:layout_below="@+id/rectangle_3"
            android:layout_marginTop="12dp"
            android:background="@drawable/rectangle_5">
            <ImageView
                android:id="@+id/like"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="13dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/like" />
            <TextView
                android:id="@+id/Helpfull"
                android:layout_width="103dp"
                android:layout_height="84dp"
                android:layout_toEndOf="@+id/like"
                android:layout_marginStart="5dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:text="@string/helpfull"
                android:textAppearance="@style/helpfull"
                android:gravity="top"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/some_id_4"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/Helpfull"
                android:layout_marginTop="-16dp"
                android:text="@string/some_id_4"
                android:textAppearance="@style/some_id_4"
                android:gravity="center_horizontal|top"
                android:textSize="63sp"
                />
            <TextView
                android:id="@+id/numpeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/some_id_4"
                android:layout_marginTop="-25dp"
                android:text="@string/numpeople"
                android:textAppearance="@style/helpfull"
                android:gravity="center_horizontal|top"
                android:textSize="16sp"
                />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/frame_26"
        android:layout_width="326dp"
        android:layout_height="47dp"
        android:layout_marginTop="80dp">
        <RelativeLayout
            android:id="@+id/tab_bar"
            android:layout_width="306dp"
            android:layout_height="43dp"
            android:background="@drawable/tab_bar"
            android:layout_centerHorizontal="true"
            >

            <RelativeLayout
                android:id="@+id/iconhome"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_centerVertical="true"
                android:background="@drawable/home"
                />
            <RelativeLayout
                android:id="@+id/iconsetting"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:layout_centerVertical="true"
                android:background="@drawable/setting"
                />
            <RelativeLayout
                android:id="@+id/iconlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:layout_centerVertical="true"
                android:background="@drawable/location"  />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>